--- a/apps/caddy/docker-compose.yml
+++ b/apps/caddy/docker-compose.yml
@@ -10,12 +10,12 @@ services:
     restart: unless-stopped
     labels:
         traefik.enable: true
-        traefik.http.routers.caddy.rule: "Host(`poc-app.cisco.com`)"
+        traefik.http.routers.caddy.rule: "Host(`${TRAEFIK_DOMAIN}.${BASE_DOMAIN}`)"
         traefik.http.routers.caddy.entrypoints: "https"
         traefik.http.routers.caddy.tls: true
         traefik.http.routers.caddy.service: "caddy"
         traefik.http.services.caddy.loadbalancer.server.port: 80
-        # traefik.http.routers.caddy.rule: "Host(`poc-app.cisco.com`) && PathPrefix(`/web`)"
+        # traefik.http.routers.caddy.rule: "Host(`${TRAEFIK_DOMAIN}.${BASE_DOMAIN}`) && PathPrefix(`/web`)"
         # traefik.http.routers.caddy.entrypoints: "https"
         # traefik.http.routers.caddy.tls: true
         # traefik.http.routers.caddy.service: "caddy"
