--- a/edge-router/docker-compose.yml
+++ b/edge-router/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./logs:/logs
       - $BASE_DIR/edge-router/config:/etc/traefik
       - $BASE_DIR/certs:/certs:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
